--- a/css/style.scss
+++ b/css/style.scss
@@ -1133,8 +1133,8 @@ section#section-news {
         background-color: transparent;
         border: none;
         cursor: pointer;
-        width: 30px; /* Ajustez la largeur selon vos besoins */
-        height: 30px; /* Ajustez la hauteur selon vos besoins */
+        width: 30px;
+        height: 30px;
 
         &:hover {
           background-image: url("../img/picto/heart-rounded-full-blue.svg");
