--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -36,8 +36,6 @@ main {
     }
   }
 
-
-
   // ---------- SECTION - CATALOG ----------
 
   #section-catalog {
@@ -198,138 +196,148 @@ main {
           border-radius: 10px;
           font-weight: bold;
         }
+
+        input#ramdom {
+          display: block;
+          padding: 12px 24px;
+          background-color: red;
+          border: none;
+          color: white;
+          border-radius: 8px;
+          text-align: center;
+          transition: background-color 0.3s ease;
+        }
+      }
+    }
+
+    .card {
+      position: relative;
+      max-width: 430px;
+      width: 100%;
+      margin: 230px auto 20px auto;
+      height: fit-content;
+      padding: 30px 15px 60px 15px;
+      border-radius: 5px;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      background-color: $background;
+
+      @media screen and (min-width: 550px) {
+        margin: 60px auto 20px auto;
+        width: 33%;
+        max-width: 530px;
+        min-width: 530px;
+        padding: 15px 5px 15px 200px;
+        height: 300px;
       }
 
-      .card {
-        position: relative;
-        max-width: 430px;
-        width: 100%;
-        margin: 230px auto 20px auto;
-        height: fit-content;
-        padding: 30px 15px 60px 15px;
-        border-radius: 5px;
+      &:hover img {
+        @media screen and (min-width: 550px) {
+          transform: translateY(-15px);
+        }
+      }
+
+      &:hover {
+        background-color: $white;
+      }
+
+      img {
+        position: absolute;
+        top: -90px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 150px;
+        height: 230px;
+        object-fit: cover;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        background-color: $background;
 
         @media screen and (min-width: 550px) {
-          margin: 60px auto 20px auto;
-          width: 33%;
-          max-width: 530px;
-          min-width: 530px;
-          padding: 15px 5px 15px 200px;
-          height: 300px;
-        }
-
-        &:hover img {
-          @media screen and (min-width: 550px) {
-            transform: translateY(-15px);
-          }
-          
-        }
-
-        &:hover {
-          background-color: $white;
-        }
-
-        img {
-          position: absolute;
-          top: -90px;
-          left: 50%;
-          transform: translate(-50%,-50%);
+          transform: none;
+          top: 32px;
+          left: 30px;
           width: 150px;
           height: 230px;
           object-fit: cover;
           box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          transition: transform 0.5s ease;
+        }
+      }
 
-          @media screen and (min-width: 550px) {
-            transform: none;
-            top: 32px;
-            left: 30px;
-            width: 150px;
-            height: 230px;
-            object-fit: cover;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            transition: transform 0.5s ease;
-          }
+      .bottom-item-card {
+        h4 {
+          font-size: 16px;
+          margin: 15px 0;
+          text-transform: capitalize;
         }
 
-        .bottom-item-card {
-          h4 {
-            font-size: 16px;
-            margin: 15px 0;
-            text-transform: capitalize;
-          }
-
-          h3.title-book-catalog {
-            font-family: "Nova Slim", sans-serif;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 18px;
-            line-height: normal;
-            letter-spacing: 0.04em;
-            color: $main-blue;
-            text-overflow: ellipsis;
-            margin-bottom: 12px;
-          }
-
-          h5 {
-            font-size: 14px;
-            text-transform: capitalize;
-          }
-
-          .description-card {
-            min-height: 60px;
-            max-height: 100px;
-            margin: 8px 0 8px;
-            width: 95%;
-            font-size: 14px;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 5;
-          }
-
-          a.link-page {
-            position: absolute;
-            right: 10px;
-            bottom: 15px;
-            font-size: 16px;
-            color: $main-blue;
-            margin-right: 10px;
-            margin-top: 20px;
-
-            &:hover {
-              color: $footer;
-            }
-          }
+        h3.title-book-catalog {
+          font-family: "Nova Slim", sans-serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 18px;
+          line-height: normal;
+          letter-spacing: 0.04em;
+          color: $main-blue;
+          text-overflow: ellipsis;
+          margin-bottom: 12px;
         }
 
-        input.heart-wishlist {
+        h5 {
+          font-size: 14px;
+          text-transform: capitalize;
+        }
+
+        .description-card {
+          min-height: 60px;
+          max-height: 100px;
+          margin: 8px 0 8px;
+          width: 95%;
+          font-size: 14px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 5;
+        }
+
+        a.link-page {
           position: absolute;
-          top: 10px;
           right: 10px;
-        }
-
-        input.input-heart {
-          background-image: url("../img/picto/heart-rounded.svg");
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          background-color: transparent;
-          border: none;
-          cursor: pointer;
-          width: 30px; /* Ajustez la largeur selon vos besoins */
-          height: 30px; /* Ajustez la hauteur selon vos besoins */
+          bottom: 15px;
+          font-size: 16px;
+          color: $main-blue;
+          margin-right: 10px;
+          margin-top: 20px;
 
           &:hover {
-            background-image: url("../img/picto/heart-rounded-full-blue.svg");
+            color: $footer;
           }
         }
+      }
 
-        input.input-heart-red {
-          background-image: url("../img/picto/heart-rounded-full-red.svg");
+      input.heart-wishlist {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
+
+      input.input-heart {
+        background-image: url("../img/picto/heart-rounded.svg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        width: 30px; /* Ajustez la largeur selon vos besoins */
+        height: 30px; /* Ajustez la hauteur selon vos besoins */
+
+        &:hover {
+          background-image: url("../img/picto/heart-rounded-full-blue.svg");
         }
+      }
+
+      input.input-heart-red {
+        background-image: url("../img/picto/heart-rounded-full-red.svg");
       }
     }
   }
