--- a/css/style.scss
+++ b/css/style.scss
@@ -485,6 +485,7 @@ section#section-main-hero {
     margin: 0 auto;
 
     div#item-section-main-hero-left {
+      z-index: 10;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -505,8 +506,8 @@ section#section-main-hero {
       }
 
       @media screen and (min-width: 1400px) {
-        margin-right: -200px;
-        margin-left: 200px;
+        margin-right: -100px;
+        margin-left: 100px;
       }
 
       .animated-word {
@@ -606,9 +607,11 @@ section#section-main-hero {
   }
 
   div#item-section-main-hero-right {
+    z-index: 1;
     display: none;
+
     img.pict-reader-hero {
-      width: 300px;
+      width: 400px;
       height: auto;
 
       @media screen and (min-width: 950px) {
