--- a/css/style.scss
+++ b/css/style.scss
@@ -220,59 +220,64 @@ p.sub-title-section {
         margin: 0 auto;
 
         @media screen and (min-width: 650px) {
-          display: block;
-          width: 300px;
+          width: 350px !important;
+          display: block !important;
         }
 
         @media screen and (min-width: 950px) {
-          width: 500px;
+          width: 600px !important;
         }
 
-        #input-search-nav-top {
-          position: relative;
-          font-size: 18px;
-          width: 90%;
-          height: 45px;
-          border: none;
-          border-bottom: 1px solid $grayForBlue;
-          background-color: transparent;
-          color: $grayForBlue;
-          margin: 0 auto;
+        form {
+          display: flex;
+          flex: 1;
 
-          &::placeholder {
-            color: $white;
+          #input-search-nav-top {
+            position: relative;
+            font-size: 18px;
+            width: 90%;
+            height: 45px;
+            border: none;
+            border-bottom: 1px solid $grayForBlue;
+            background-color: transparent;
+            color: $grayForBlue;
+            margin: 0 auto;
+
+            &::placeholder {
+              color: $white;
+            }
+
+            &:focus {
+              outline: none;
+            }
           }
 
-          &:focus {
-            outline: none;
-          }
-        }
-
-        input#btn-search-nav-top {
-          display: block;
-          position: absolute;
-          right: -8px;
-          top: 5px;
-          width: 30px;
-          height: 30px;
-          background-image: url("../img/picto/search-lg.svg");
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          background-color: transparent;
-          border: none;
-          cursor: pointer;
-          transition: background-color 0.3s ease;
-
-          @media screen and (min-width: 650px) {
+          input#btn-search-nav-top {
+            display: block;
             position: absolute;
-            right: 30px;
+            right: -8px;
             top: 5px;
-          }
-
-          &:hover {
+            width: 30px;
+            height: 30px;
+            background-image: url("../img/picto/search-lg.svg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: transparent;
+            border: none;
             cursor: pointer;
-            transform: scale(1.07);
+            transition: background-color 0.3s ease;
+
+            @media screen and (min-width: 650px) {
+              position: absolute;
+              right: 30px;
+              top: 5px;
+            }
+
+            &:hover {
+              cursor: pointer;
+              transform: scale(1.07);
+            }
           }
         }
       }
@@ -611,7 +616,7 @@ section#section-main-hero {
     display: none;
 
     img.pict-reader-hero {
-      width: 400px;
+      width: 326px;
       height: auto;
 
       @media screen and (min-width: 950px) {
