--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -10,24 +10,27 @@ $bgModal: rgba(6, 13, 30, 0.5);
 main {
   width: 90%;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 70px;
 
   @media screen and (min-width: 950px) {
-    padding-top: 100px;
+    padding-top: 70px;
   }
 
   #Breadcrumb {
-    display: none;
-
-    @media screen and (min-width: 950px) {
       display: flex;
-    }
+
 
     li {
       margin-right: 10px;
 
       a {
+        font-size: 12px;
         color: $main-blue;
+
+        @media screen and (min-width: 950px) {
+          font-size: 14px;
+        }
+      
 
         &:hover {
           color: $footer;
@@ -64,6 +67,7 @@ main {
         background-color: $white;
         border-radius: 20px;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        margin-right: 10px;
 
         @media screen and (min-width: 950px) {
           position: -webkit-sticky;
@@ -163,7 +167,7 @@ main {
       justify-content: space-evenly;
 
       @media screen and (min-width: 950px) {
-        width: 79%;
+        width: 78%;
       }
 
       .container-sort {
@@ -203,9 +207,21 @@ main {
           background-color: red;
           border: none;
           color: white;
+          font-weight: bold;
           border-radius: 8px;
           text-align: center;
           transition: background-color 0.3s ease;
+          margin: 20px 0;
+
+          @media screen and (min-width: 950px) {
+            margin: inherit;
+          }
+    
+
+          &:hover {
+            background-color: $btn-red-hover;
+            cursor: pointer;
+          }
         }
       }
     }
@@ -214,7 +230,7 @@ main {
       position: relative;
       max-width: 430px;
       width: 100%;
-      margin: 230px auto 20px auto;
+      margin: 230px 10px 20px 10px;
       height: fit-content;
       padding: 30px 15px 60px 15px;
       border-radius: 5px;
@@ -222,7 +238,7 @@ main {
       background-color: $background;
 
       @media screen and (min-width: 550px) {
-        margin: 60px auto 20px auto;
+        margin: 40px auto 20px auto;
         width: 33%;
         max-width: 530px;
         min-width: 530px;
